--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,14 @@
 {
-  "plugins": [
-    "babel"
-  ],
-  "extends": [
-    "eslint:recommended"
-  ],
-  "parser": "babel-eslint",
+  "env": {
+    "es2021": true,
+    "node": true,
+    "mocha": true
+  },
+  "extends": ["eslint:recommended"],
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
-    "semi": 2,
-    "indent": [
-      "error",
-      2
-    ],
-    "no-irregular-whitespace": 0,
-    "babel/semi": 0
-  },
-  "env": {
-    "node": true,
-    "mocha": true
   }
 }
