--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "recipe-data-scraper",
+  "name": "@stiforr/recipe-data-scraper",
   "version": "1.4.1",
   "description": "web scraper for recipe data",
   "repository": "github:thelifenadine/recipe-data-scraper",
-  "main": "lib/index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "source": "src/main.js",
   "scripts": {
+    "watch": "parcel watch",
+    "parcel:build": "parcel build",
     "build": "webpack",
     "build-watch": "webpack -w",
     "test-old": "mocha './src/**/*.test.js' --require @babel/register --reporter spec || exit 0",
@@ -38,17 +40,20 @@
     "clean-webpack-plugin": "4.0.0",
     "coveralls": "3.1.1",
     "cross-env": "7.0.3",
-    "eslint": "8.7.0",
+    "eslint": "8.22.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-babel": "5.3.1",
     "istanbul": "0.4.5",
     "mocha": "9.1.4",
     "mocha-lcov-reporter": "1.3.0",
     "nyc": "15.1.0",
+    "parcel": "^2.7.0",
+    "prettier": "^2.7.1",
     "proxyquire": "2.1.3",
     "readline-sync": "1.4.10",
     "sinon": "12.0.1",
     "terser-webpack-plugin": "5.3.0",
+    "ts-migrate": "^0.1.33",
     "webpack": "5.67.0",
     "webpack-cli": "4.9.1"
   },
@@ -62,5 +67,12 @@
     ],
     "sourceMap": false,
     "instrument": false
+  },
+  "volta": {
+    "node": "18.9.0",
+    "yarn": "1.22.19"
+  },
+  "prettier": {
+    "printWidth": 100
   }
 }
