--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "web scraper for recipe data",
   "repository": "github:thelifenadine/recipe-data-scraper",
   "main": "dist/index.js",
-  "source": "src/main.js",
+  "source": "src/main.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "watch": "parcel watch",
     "parcel:build": "parcel build",
     "build": "webpack",
     "build-watch": "webpack -w",
     "test-old": "mocha './src/**/*.test.js' --require @babel/register --reporter spec || exit 0",
-    "lint": "eslint './src/**/*.js'",
-    "test": "cross-env NODE_ENV=test nyc mocha './src/**/*.test.js' --exit",
+    "lint": "eslint './src/**/*.ts'",
+    "test": "cross-env NODE_ENV=test nyc mocha './src/**/*.test.ts' --exit",
     "coveralls": "cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
     "print-recipe-tester": "cross-env LOGGING_ENABLED=true babel-node ./scripts/printRecipeTester",
@@ -27,22 +28,19 @@
     "microdata-node": "2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.16.12",
-    "@babel/node": "7.16.8",
-    "@babel/plugin-proposal-class-properties": "7.16.7",
-    "@babel/plugin-transform-runtime": "7.16.10",
-    "@babel/preset-env": "7.16.11",
-    "@babel/register": "7.16.9",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.3",
-    "babel-plugin-istanbul": "6.1.1",
+    "@parcel/packager-ts": "2.7.0",
+    "@parcel/transformer-typescript-types": "2.7.0",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "chai": "4.3.4",
     "clean-webpack-plugin": "4.0.0",
     "coveralls": "3.1.1",
     "cross-env": "7.0.3",
     "eslint": "8.22.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-babel": "5.3.1",
     "istanbul": "0.4.5",
     "mocha": "9.1.4",
     "mocha-lcov-reporter": "1.3.0",
@@ -54,6 +52,7 @@
     "sinon": "12.0.1",
     "terser-webpack-plugin": "5.3.0",
     "ts-migrate": "^0.1.33",
+    "typescript": "^4.8.3",
     "webpack": "5.67.0",
     "webpack-cli": "4.9.1"
   },
