--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "chai": "4.3.4",
-    "clean-webpack-plugin": "4.0.0",
     "coveralls": "3.1.1",
     "cross-env": "7.0.3",
     "eslint": "8.22.0",
@@ -50,11 +49,7 @@
     "proxyquire": "2.1.3",
     "readline-sync": "1.4.10",
     "sinon": "12.0.1",
-    "terser-webpack-plugin": "5.3.0",
-    "ts-migrate": "^0.1.33",
-    "typescript": "^4.8.3",
-    "webpack": "5.67.0",
-    "webpack-cli": "4.9.1"
+    "typescript": "^4.8.3"
   },
   "nyc": {
     "require": [
