--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
   "scripts": {
     "watch": "parcel watch",
     "parcel:build": "parcel build",
-    "build": "webpack",
-    "build-watch": "webpack -w",
-    "test-old": "mocha './src/**/*.test.js' --require @babel/register --reporter spec || exit 0",
     "lint": "eslint './src/**/*.ts'",
-    "test": "cross-env NODE_ENV=test nyc mocha './src/**/*.test.ts' --exit",
+    "test": "cross-env NODE_ENV=test ts-mocha './src/**/*.test.ts' --exit",
     "coveralls": "cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
     "print-recipe-tester": "cross-env LOGGING_ENABLED=true babel-node ./scripts/printRecipeTester",
@@ -33,15 +30,17 @@
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
     "@types/proxyquire": "^1.3.28",
+    "@types/readline-sync": "^1.4.4",
     "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
-    "chai": "4.3.4",
+    "chai": "4.3.6",
     "coveralls": "3.1.1",
     "cross-env": "7.0.3",
     "eslint": "8.22.0",
+    "esm": "^3.2.25",
     "istanbul": "0.4.5",
-    "mocha": "9.1.4",
+    "mocha": "10.0.0",
     "mocha-lcov-reporter": "1.3.0",
     "nyc": "15.1.0",
     "parcel": "^2.7.0",
@@ -49,6 +48,9 @@
     "proxyquire": "2.1.3",
     "readline-sync": "1.4.10",
     "sinon": "12.0.1",
+    "ts-migrate": "^0.1.33",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "nyc": {
